# flutter_nnnoiseless

./: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  precompile_binaries.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle.kts
android/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: capture_io.dart  capture_web.dart  main.dart
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner/: Info.plist
integration_test/: simple_test.dart
ios/: flutter_nnnoiseless.podspec
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: flutter_nnnoiseless.dart  flutter_nnnoiseless_web.dart  main.dart  nnnoiseless.dart
linux/: CMakeLists.txt
macos/: flutter_nnnoiseless.podspec
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: mod.rs  nnnoiseless.rs  session.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_flutter_nnnoiseless.podspec
rust_builder/macos/: rust_lib_flutter_nnnoiseless.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build_apple_xcframework.sh  build_web.sh
test/: noiseless_test.dart  widget_test.dart
web/pkg/: rust_lib_flutter_nnnoiseless.js  rust_lib_flutter_nnnoiseless_bg.wasm
windows/: CMakeLists.txt
(+19 files in other folders)
