[package]
name = "rust_lib_flutter_nnnoiseless"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1.0.99"
dasp = { version = "0.11", features = ["interpolate", "ring_buffer", "signal"] }
flutter_rust_bridge = "=2.11.1"
hound = "3.5.1"
nnnoiseless = "0.5.1"
once_cell = "1.21.3"
rand = "0.9.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
